feat: scroll indicator
(cherry picked from commit bda38c0e2b9983fd34b4cd952bcd465ccaf8af08)

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -85,6 +85,13 @@ body {
         margin-right: 32px;
     }
 
+    .layout-scroll{
+        direction:rtl;
+    }
+
+    .layout-scroll section, .layout-scroll div {
+        direction:ltr;
+    }
 
     .scroll-mx-220p::-webkit-scrollbar-track {
         margin-left: 220px;
